# workout_tracker

./: .gitignore  main.py  pyproject.toml  sql.py
database/: database_creation.sql  exercise_seed.sql
